# lab3_postfix

Petrakov/: CMakeLists.txt
Petrakov/base/: Automat.h  CMakeLists.txt  postfix.cpp  postfix.h  queue.h  sample_postfix.cpp  stack.h
Petrakov/base_test/: CMakeLists.txt  test_tpostfix.cpp  test_tqueue.cpp  test_tstack.cpp
